[EFL][DRT] Catch the "resource,request,willsend" signal https://bugs.webkit.org/show_bug.cgi?id=82192

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-04-04
Reviewed by Gustavo Noronha Silva.

Source/WebKit/efl:

EFL's FrameLoaderClient now emits the "resource,request,willsend"
signal on the view for all resources about to be loaded, not just the
main frame. Also adds a boolean flag to Ewk_Frame_Resource_Request to
distinguish the request for the main frame from those for
sub-resources.

* WebCoreSupport/FrameLoaderClientEfl.cpp:
(WebCore::FrameLoaderClientEfl::dispatchWillSendRequest):
(WebCore::FrameLoaderClientEfl::assignIdentifierToInitialRequest):
(WebCore::FrameLoaderClientEfl::dispatchDecidePolicyForNavigationAction):
* ewk/ewk_frame.h:
* ewk/ewk_view.h:

Tools:

EFL's DumpRenderTree now catches the "resource,request,willsend"
signal in order to implement the "Blocked access to external URL"
behavior and avoid potential network-related timeouts in the tests.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::createView):
(DumpRenderTreeChrome::onWillSendRequest):
* DumpRenderTree/efl/DumpRenderTreeChrome.h:
(DumpRenderTreeChrome):

LayoutTests:

Unskip related test cases now that EFL's DumpRenderTree
catches the "resource,request,willsend" signal and implements the
"Blocked access to external URL" behavior.

* platform/efl/Skipped:

Canonical link: https://commits.webkit.org/100561@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113224 268f45cc-cd09-0410-ab3c-d52691b4dbfc